# task_channel

./: CMakeLists.txt
include/: task_channel.h
test/: CMakeLists.txt  channel_test.cpp  test.cpp  test_task.h
